add chatbot on site

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -2,7 +2,7 @@
     <nav class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <span class="text-2xl font-bold gradient-text">Bisonar</span>
+               <img src="{{ url_for('static', filename='images/logo/bisonar-logo.png') }}" alt="Bisonar Logo" class="h-8 w-auto md:h-10">
             </div>
             
             <!-- Desktop Menu - Hash link kullan -->
