--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,4 +1,5 @@
-<header class="sticky top-0 z-50 border-b border-gray-200 dark:border-gray-800" style="background: linear-gradient(90deg, #4640FF, #E61577);">
+<header class="sticky top-0 z-50 border-b border-gray-200 dark:border-gray-800" 
+style="background: linear-gradient(90deg, #4640FF, #E61577);">
     <nav class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
             
