robots and sştemap code refactor

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
     <link rel="alternate" hreflang="en" href="{{ generate_hreflang()['en'] }}" />
     <link rel="alternate" hreflang="tr" href="{{ generate_hreflang()['tr'] }}" />
     
+    <meta name="robots" content="index, follow">
+
     <!-- Dynamic Title & Description -->
     <title>{{ meta_title }}</title>
     <meta name="description" content="{{ meta_description }}">
